chore: use correct song classes, fix logging
